Bug 93204 - "missing topmost touch" when using touchpad
Summary: "missing topmost touch" when using touchpad
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Peter Hutterer
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-02 07:10 UTC by Timm Bäder
Modified: 2015-12-03 23:38 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Timm Bäder 2015-12-02 07:10:11 UTC
From https://bugs.freedesktop.org/show_bug.cgi?id=93165:

Here I selected the touchpad and reproduced the "missing topmost touch" output, I *think* by lifting both fingers up at the same time:

# EVEMU 1.3
# Kernel: 4.2.5-1-ARCH
# DMI: dmi:bvnLENOVO:bvr6UET54WW(1.34):bd09/16/2010:svnLENOVO:pn292422G:pvrThinkPadT410s:rvnLENOVO:rn292422G:rvrNotAvailable:cvnLENOVO:ct10:cvrNotAvailable:
# Input device name: "SynPS/2 Synaptics TouchPad"
# Input device ID: bus 0x11 vendor 0x02 product 0x07 version 0x1b1
# Supported events:
#   Event type 0 (EV_SYN)
#     Event code 0 (SYN_REPORT)
#     Event code 1 (SYN_CONFIG)
#     Event code 2 (SYN_MT_REPORT)
#     Event code 3 (SYN_DROPPED)
#     Event code 4 ((null))
#     Event code 5 ((null))
#     Event code 6 ((null))
#     Event code 7 ((null))
#     Event code 8 ((null))
#     Event code 9 ((null))
#     Event code 10 ((null))
#     Event code 11 ((null))
#     Event code 12 ((null))
#     Event code 13 ((null))
#     Event code 14 ((null))
#   Event type 1 (EV_KEY)
#     Event code 272 (BTN_LEFT)
#     Event code 273 (BTN_RIGHT)
#     Event code 325 (BTN_TOOL_FINGER)
#     Event code 330 (BTN_TOUCH)
#     Event code 333 (BTN_TOOL_DOUBLETAP)
#     Event code 334 (BTN_TOOL_TRIPLETAP)
#   Event type 3 (EV_ABS)
#     Event code 0 (ABS_X)
#       Value   4308
#       Min     1472
#       Max     5888
#       Fuzz       0
#       Flat       0
#       Resolution 75
#     Event code 1 (ABS_Y)
#       Value   3389
#       Min     1408
#       Max     4820
#       Fuzz       0
#       Flat       0
#       Resolution 105
#     Event code 24 (ABS_PRESSURE)
#       Value      0
#       Min        0
#       Max      255
#       Fuzz       0
#       Flat       0
#       Resolution 0
#     Event code 28 (ABS_TOOL_WIDTH)
#       Value      0
#       Min        0
#       Max       15
#       Fuzz       0
#       Flat       0
#       Resolution 0
#     Event code 47 (ABS_MT_SLOT)
#       Value      0
#       Min        0
#       Max        1
#       Fuzz       0
#       Flat       0
#       Resolution 0
#     Event code 53 (ABS_MT_POSITION_X)
#       Value      0
#       Min     1472
#       Max     5888
#       Fuzz       0
#       Flat       0
#       Resolution 75
#     Event code 54 (ABS_MT_POSITION_Y)
#       Value      0
#       Min     1408
#       Max     4820
#       Fuzz       0
#       Flat       0
#       Resolution 105
#     Event code 57 (ABS_MT_TRACKING_ID)
#       Value      0
#       Min        0
#       Max    65535
#       Fuzz       0
#       Flat       0
#       Resolution 0
# Properties:
#   Property  type 0 (INPUT_PROP_POINTER)
#   Property  type 3 (INPUT_PROP_SEMI_MT)
N: SynPS/2 Synaptics TouchPad
I: 0011 0002 0007 01b1
P: 09 00 00 00 00 00 00 00
B: 00 0b 00 00 00 00 00 00 00
B: 01 00 00 00 00 00 00 00 00
B: 01 00 00 00 00 00 00 00 00
B: 01 00 00 00 00 00 00 00 00
B: 01 00 00 00 00 00 00 00 00
B: 01 00 00 03 00 00 00 00 00
B: 01 20 64 00 00 00 00 00 00
B: 01 00 00 00 00 00 00 00 00
B: 01 00 00 00 00 00 00 00 00
B: 01 00 00 00 00 00 00 00 00
B: 01 00 00 00 00 00 00 00 00
B: 01 00 00 00 00 00 00 00 00
B: 01 00 00 00 00 00 00 00 00
B: 02 00 00 00 00 00 00 00 00
B: 03 03 00 00 11 00 80 60 02
B: 04 00 00 00 00 00 00 00 00
B: 05 00 00 00 00 00 00 00 00
B: 11 00 00 00 00 00 00 00 00
B: 12 00 00 00 00 00 00 00 00
B: 14 00 00 00 00 00 00 00 00
B: 15 00 00 00 00 00 00 00 00
B: 15 00 00 00 00 00 00 00 00
A: 00 1472 5888 0 0 75
A: 01 1408 4820 0 0 105
A: 18 0 255 0 0 0
A: 1c 0 15 0 0 0
A: 2f 0 1 0 0 0
A: 35 1472 5888 0 0 75
A: 36 1408 4820 0 0 105
A: 39 0 65535 0 0 0
################################
#      Waiting for events      #
################################
E: 0.000001 0003 0039 0747	# EV_ABS / ABS_MT_TRACKING_ID   747
E: 0.000001 0003 0035 3337	# EV_ABS / ABS_MT_POSITION_X    3337
E: 0.000001 0003 0036 4363	# EV_ABS / ABS_MT_POSITION_Y    4363
E: 0.000001 0001 014a 0001	# EV_KEY / BTN_TOUCH            1
E: 0.000001 0003 0000 3337	# EV_ABS / ABS_X                3337
E: 0.000001 0003 0001 4363	# EV_ABS / ABS_Y                4363
E: 0.000001 0003 0018 0060	# EV_ABS / ABS_PRESSURE         60
E: 0.000001 0003 001c 0004	# EV_ABS / ABS_TOOL_WIDTH       4
E: 0.000001 0001 0145 0001	# EV_KEY / BTN_TOOL_FINGER      1
E: 0.000001 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +0ms
E: 0.013377 0003 0035 3322	# EV_ABS / ABS_MT_POSITION_X    3322
E: 0.013377 0003 0036 4354	# EV_ABS / ABS_MT_POSITION_Y    4354
E: 0.013377 0003 0000 3322	# EV_ABS / ABS_X                3322
E: 0.013377 0003 0001 4354	# EV_ABS / ABS_Y                4354
E: 0.013377 0003 0018 0063	# EV_ABS / ABS_PRESSURE         63
E: 0.013377 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +13ms
E: 0.025559 0003 0035 3310	# EV_ABS / ABS_MT_POSITION_X    3310
E: 0.025559 0003 0036 4342	# EV_ABS / ABS_MT_POSITION_Y    4342
E: 0.025559 0003 0000 3310	# EV_ABS / ABS_X                3310
E: 0.025559 0003 0001 4342	# EV_ABS / ABS_Y                4342
E: 0.025559 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +12ms
E: 0.037375 0003 0035 3304	# EV_ABS / ABS_MT_POSITION_X    3304
E: 0.037375 0003 0036 4333	# EV_ABS / ABS_MT_POSITION_Y    4333
E: 0.037375 0003 0000 3304	# EV_ABS / ABS_X                3304
E: 0.037375 0003 0001 4333	# EV_ABS / ABS_Y                4333
E: 0.037375 0003 0018 0064	# EV_ABS / ABS_PRESSURE         64
E: 0.037375 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +12ms
E: 0.049269 0003 0035 3306	# EV_ABS / ABS_MT_POSITION_X    3306
E: 0.049269 0003 0036 4334	# EV_ABS / ABS_MT_POSITION_Y    4334
E: 0.049269 0003 0000 3306	# EV_ABS / ABS_X                3306
E: 0.049269 0003 0001 4334	# EV_ABS / ABS_Y                4334
E: 0.049269 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +12ms
E: 0.062280 0003 0035 3311	# EV_ABS / ABS_MT_POSITION_X    3311
E: 0.062280 0003 0036 4340	# EV_ABS / ABS_MT_POSITION_Y    4340
E: 0.062280 0003 0000 3311	# EV_ABS / ABS_X                3311
E: 0.062280 0003 0001 4340	# EV_ABS / ABS_Y                4340
E: 0.062280 0003 0018 0065	# EV_ABS / ABS_PRESSURE         65
E: 0.062280 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +13ms
E: 0.086986 0003 0035 3318	# EV_ABS / ABS_MT_POSITION_X    3318
E: 0.086986 0003 0036 4350	# EV_ABS / ABS_MT_POSITION_Y    4350
E: 0.086986 0003 0000 3318	# EV_ABS / ABS_X                3318
E: 0.086986 0003 0001 4350	# EV_ABS / ABS_Y                4350
E: 0.086986 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +24ms
E: 0.098652 0003 0035 3323	# EV_ABS / ABS_MT_POSITION_X    3323
E: 0.098652 0003 0036 4356	# EV_ABS / ABS_MT_POSITION_Y    4356
E: 0.098652 0003 0000 3323	# EV_ABS / ABS_X                3323
E: 0.098652 0003 0001 4356	# EV_ABS / ABS_Y                4356
E: 0.098652 0003 0018 0066	# EV_ABS / ABS_PRESSURE         66
E: 0.098652 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +12ms
E: 0.111662 0003 0035 3325	# EV_ABS / ABS_MT_POSITION_X    3325
E: 0.111662 0003 0036 4359	# EV_ABS / ABS_MT_POSITION_Y    4359
E: 0.111662 0003 0000 3325	# EV_ABS / ABS_X                3325
E: 0.111662 0003 0001 4359	# EV_ABS / ABS_Y                4359
E: 0.111662 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +13ms
E: 0.123351 0003 0035 3323	# EV_ABS / ABS_MT_POSITION_X    3323
E: 0.123351 0003 0036 4360	# EV_ABS / ABS_MT_POSITION_Y    4360
E: 0.123351 0003 0000 3323	# EV_ABS / ABS_X                3323
E: 0.123351 0003 0001 4360	# EV_ABS / ABS_Y                4360
E: 0.123351 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +12ms
E: 0.136363 0003 0035 3319	# EV_ABS / ABS_MT_POSITION_X    3319
E: 0.136363 0003 0036 4356	# EV_ABS / ABS_MT_POSITION_Y    4356
E: 0.136363 0003 0000 3319	# EV_ABS / ABS_X                3319
E: 0.136363 0003 0001 4356	# EV_ABS / ABS_Y                4356
E: 0.136363 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +13ms
E: 0.160221 0003 0035 3311	# EV_ABS / ABS_MT_POSITION_X    3311
E: 0.160221 0003 0036 4352	# EV_ABS / ABS_MT_POSITION_Y    4352
E: 0.160221 0003 0000 3311	# EV_ABS / ABS_X                3311
E: 0.160221 0003 0001 4352	# EV_ABS / ABS_Y                4352
E: 0.160221 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +24ms
E: 0.171949 0003 0035 3307	# EV_ABS / ABS_MT_POSITION_X    3307
E: 0.171949 0003 0036 4348	# EV_ABS / ABS_MT_POSITION_Y    4348
E: 0.171949 0003 0000 3307	# EV_ABS / ABS_X                3307
E: 0.171949 0003 0001 4348	# EV_ABS / ABS_Y                4348
E: 0.171949 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +11ms
E: 0.184980 0003 0035 3303	# EV_ABS / ABS_MT_POSITION_X    3303
E: 0.184980 0003 0000 3303	# EV_ABS / ABS_X                3303
E: 0.184980 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +13ms
E: 0.196818 0003 0035 3300	# EV_ABS / ABS_MT_POSITION_X    3300
E: 0.196818 0003 0036 4349	# EV_ABS / ABS_MT_POSITION_Y    4349
E: 0.196818 0003 0000 3300	# EV_ABS / ABS_X                3300
E: 0.196818 0003 0001 4349	# EV_ABS / ABS_Y                4349
E: 0.196818 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +12ms
E: 0.208783 0003 0035 3304	# EV_ABS / ABS_MT_POSITION_X    3304
E: 0.208783 0003 0036 4353	# EV_ABS / ABS_MT_POSITION_Y    4353
E: 0.208783 0003 0000 3304	# EV_ABS / ABS_X                3304
E: 0.208783 0003 0001 4353	# EV_ABS / ABS_Y                4353
E: 0.208783 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +12ms
E: 0.233474 0003 0035 3456	# EV_ABS / ABS_MT_POSITION_X    3456
E: 0.233474 0003 0036 4364	# EV_ABS / ABS_MT_POSITION_Y    4364
E: 0.233474 0003 002f 0001	# EV_ABS / ABS_MT_SLOT          1
E: 0.233474 0003 0039 0748	# EV_ABS / ABS_MT_TRACKING_ID   748
E: 0.233474 0003 0035 3547	# EV_ABS / ABS_MT_POSITION_X    3547
E: 0.233474 0003 0036 1234	# EV_ABS / ABS_MT_POSITION_Y    1234
E: 0.233474 0003 0000 3547	# EV_ABS / ABS_X                3547
E: 0.233474 0003 0001 4364	# EV_ABS / ABS_Y                4364
E: 0.233474 0003 0018 0068	# EV_ABS / ABS_PRESSURE         68
E: 0.233474 0003 001c 0005	# EV_ABS / ABS_TOOL_WIDTH       5
E: 0.233474 0001 0145 0000	# EV_KEY / BTN_TOOL_FINGER      0
E: 0.233474 0001 014d 0001	# EV_KEY / BTN_TOOL_DOUBLETAP   1
E: 0.233474 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +25ms
E: 0.258075 0003 002f 0000	# EV_ABS / ABS_MT_SLOT          0
E: 0.258075 0003 0035 3642	# EV_ABS / ABS_MT_POSITION_X    3642
E: 0.258075 0003 0036 4382	# EV_ABS / ABS_MT_POSITION_Y    4382
E: 0.258075 0003 002f 0001	# EV_ABS / ABS_MT_SLOT          1
E: 0.258075 0003 0035 3658	# EV_ABS / ABS_MT_POSITION_X    3658
E: 0.258075 0003 0036 1258	# EV_ABS / ABS_MT_POSITION_Y    1258
E: 0.258075 0003 0000 3642	# EV_ABS / ABS_X                3642
E: 0.258075 0003 0001 4382	# EV_ABS / ABS_Y                4382
E: 0.258075 0003 0018 0069	# EV_ABS / ABS_PRESSURE         69
E: 0.258075 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +25ms
E: 0.282607 0003 002f 0000	# EV_ABS / ABS_MT_SLOT          0
E: 0.282607 0003 0035 3705	# EV_ABS / ABS_MT_POSITION_X    3705
E: 0.282607 0003 0036 4391	# EV_ABS / ABS_MT_POSITION_Y    4391
E: 0.282607 0003 002f 0001	# EV_ABS / ABS_MT_SLOT          1
E: 0.282607 0003 0035 3708	# EV_ABS / ABS_MT_POSITION_X    3708
E: 0.282607 0003 0036 1288	# EV_ABS / ABS_MT_POSITION_Y    1288
E: 0.282607 0003 0000 3705	# EV_ABS / ABS_X                3705
E: 0.282607 0003 0001 4391	# EV_ABS / ABS_Y                4391
E: 0.282607 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +24ms
E: 0.307816 0003 002f 0000	# EV_ABS / ABS_MT_SLOT          0
E: 0.307816 0003 0035 3732	# EV_ABS / ABS_MT_POSITION_X    3732
E: 0.307816 0003 0036 4389	# EV_ABS / ABS_MT_POSITION_Y    4389
E: 0.307816 0003 002f 0001	# EV_ABS / ABS_MT_SLOT          1
E: 0.307816 0003 0035 3742	# EV_ABS / ABS_MT_POSITION_X    3742
E: 0.307816 0003 0036 1304	# EV_ABS / ABS_MT_POSITION_Y    1304
E: 0.307816 0003 0000 3732	# EV_ABS / ABS_X                3732
E: 0.307816 0003 0001 4389	# EV_ABS / ABS_Y                4389
E: 0.307816 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +25ms
E: 0.331079 0003 002f 0000	# EV_ABS / ABS_MT_SLOT          0
E: 0.331079 0003 0035 3726	# EV_ABS / ABS_MT_POSITION_X    3726
E: 0.331079 0003 0036 4362	# EV_ABS / ABS_MT_POSITION_Y    4362
E: 0.331079 0003 002f 0001	# EV_ABS / ABS_MT_SLOT          1
E: 0.331079 0003 0035 3734	# EV_ABS / ABS_MT_POSITION_X    3734
E: 0.331079 0003 0036 1288	# EV_ABS / ABS_MT_POSITION_Y    1288
E: 0.331079 0003 0000 3726	# EV_ABS / ABS_X                3726
E: 0.331079 0003 0001 4362	# EV_ABS / ABS_Y                4362
E: 0.331079 0003 0018 0071	# EV_ABS / ABS_PRESSURE         71
E: 0.331079 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +24ms
E: 0.356044 0003 002f 0000	# EV_ABS / ABS_MT_SLOT          0
E: 0.356044 0003 0035 3699	# EV_ABS / ABS_MT_POSITION_X    3699
E: 0.356044 0003 0036 4328	# EV_ABS / ABS_MT_POSITION_Y    4328
E: 0.356044 0003 002f 0001	# EV_ABS / ABS_MT_SLOT          1
E: 0.356044 0003 0035 3702	# EV_ABS / ABS_MT_POSITION_X    3702
E: 0.356044 0003 0036 1242	# EV_ABS / ABS_MT_POSITION_Y    1242
E: 0.356044 0003 0000 3699	# EV_ABS / ABS_X                3699
E: 0.356044 0003 0001 4328	# EV_ABS / ABS_Y                4328
E: 0.356044 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +25ms
E: 0.381093 0003 002f 0000	# EV_ABS / ABS_MT_SLOT          0
E: 0.381093 0003 0035 3668	# EV_ABS / ABS_MT_POSITION_X    3668
E: 0.381093 0003 0036 4314	# EV_ABS / ABS_MT_POSITION_Y    4314
E: 0.381093 0003 002f 0001	# EV_ABS / ABS_MT_SLOT          1
E: 0.381093 0003 0035 3674	# EV_ABS / ABS_MT_POSITION_X    3674
E: 0.381093 0003 0036 1212	# EV_ABS / ABS_MT_POSITION_Y    1212
E: 0.381093 0003 0000 3674	# EV_ABS / ABS_X                3674
E: 0.381093 0003 0001 4314	# EV_ABS / ABS_Y                4314
E: 0.381093 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +25ms
E: 0.405393 0003 002f 0000	# EV_ABS / ABS_MT_SLOT          0
E: 0.405393 0003 0035 3670	# EV_ABS / ABS_MT_POSITION_X    3670
E: 0.405393 0003 0036 4315	# EV_ABS / ABS_MT_POSITION_Y    4315
E: 0.405393 0003 002f 0001	# EV_ABS / ABS_MT_SLOT          1
E: 0.405393 0003 0035 3673	# EV_ABS / ABS_MT_POSITION_X    3673
E: 0.405393 0003 0036 1224	# EV_ABS / ABS_MT_POSITION_Y    1224
E: 0.405393 0003 0000 3673	# EV_ABS / ABS_X                3673
E: 0.405393 0003 0001 4315	# EV_ABS / ABS_Y                4315
E: 0.405393 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +24ms
E: 0.430151 0003 002f 0000	# EV_ABS / ABS_MT_SLOT          0
E: 0.430151 0003 0036 4322	# EV_ABS / ABS_MT_POSITION_Y    4322
E: 0.430151 0003 002f 0001	# EV_ABS / ABS_MT_SLOT          1
E: 0.430151 0003 0035 3674	# EV_ABS / ABS_MT_POSITION_X    3674
E: 0.430151 0003 0036 1238	# EV_ABS / ABS_MT_POSITION_Y    1238
E: 0.430151 0003 0000 3674	# EV_ABS / ABS_X                3674
E: 0.430151 0003 0001 4322	# EV_ABS / ABS_Y                4322
E: 0.430151 0003 0018 0068	# EV_ABS / ABS_PRESSURE         68
E: 0.430151 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +25ms
E: 0.453655 0003 002f 0000	# EV_ABS / ABS_MT_SLOT          0
E: 0.453655 0003 0035 3676	# EV_ABS / ABS_MT_POSITION_X    3676
E: 0.453655 0003 0036 4326	# EV_ABS / ABS_MT_POSITION_Y    4326
E: 0.453655 0003 002f 0001	# EV_ABS / ABS_MT_SLOT          1
E: 0.453655 0003 0035 3678	# EV_ABS / ABS_MT_POSITION_X    3678
E: 0.453655 0003 0000 3678	# EV_ABS / ABS_X                3678
E: 0.453655 0003 0001 4326	# EV_ABS / ABS_Y                4326
E: 0.453655 0003 0018 0069	# EV_ABS / ABS_PRESSURE         69
E: 0.453655 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +23ms
E: 0.478841 0003 002f 0000	# EV_ABS / ABS_MT_SLOT          0
E: 0.478841 0003 0035 3682	# EV_ABS / ABS_MT_POSITION_X    3682
E: 0.478841 0003 0036 4318	# EV_ABS / ABS_MT_POSITION_Y    4318
E: 0.478841 0003 002f 0001	# EV_ABS / ABS_MT_SLOT          1
E: 0.478841 0003 0035 3686	# EV_ABS / ABS_MT_POSITION_X    3686
E: 0.478841 0003 0036 1242	# EV_ABS / ABS_MT_POSITION_Y    1242
E: 0.478841 0003 0000 3686	# EV_ABS / ABS_X                3686
E: 0.478841 0003 0001 4318	# EV_ABS / ABS_Y                4318
E: 0.478841 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +25ms
E: 0.502489 0003 002f 0000	# EV_ABS / ABS_MT_SLOT          0
E: 0.502489 0003 0035 3680	# EV_ABS / ABS_MT_POSITION_X    3680
E: 0.502489 0003 0036 4300	# EV_ABS / ABS_MT_POSITION_Y    4300
E: 0.502489 0003 002f 0001	# EV_ABS / ABS_MT_SLOT          1
E: 0.502489 0003 0035 3683	# EV_ABS / ABS_MT_POSITION_X    3683
E: 0.502489 0003 0036 1224	# EV_ABS / ABS_MT_POSITION_Y    1224
E: 0.502489 0003 0000 3683	# EV_ABS / ABS_X                3683
E: 0.502489 0003 0001 4300	# EV_ABS / ABS_Y                4300
E: 0.502489 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +24ms
E: 0.527615 0003 002f 0000	# EV_ABS / ABS_MT_SLOT          0
E: 0.527615 0003 0035 3418	# EV_ABS / ABS_MT_POSITION_X    3418
E: 0.527615 0003 0036 4182	# EV_ABS / ABS_MT_POSITION_Y    4182
E: 0.527615 0003 002f 0001	# EV_ABS / ABS_MT_SLOT          1
E: 0.527615 0003 0035 3564	# EV_ABS / ABS_MT_POSITION_X    3564
E: 0.527615 0003 0036 1232	# EV_ABS / ABS_MT_POSITION_Y    1232
E: 0.527615 0001 014a 0000	# EV_KEY / BTN_TOUCH            0
E: 0.527615 0003 0000 3418	# EV_ABS / ABS_X                3418
E: 0.527615 0003 0001 4182	# EV_ABS / ABS_Y                4182
E: 0.527615 0003 0018 0019	# EV_ABS / ABS_PRESSURE         19
E: 0.527615 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +25ms
E: 0.539895 0003 002f 0000	# EV_ABS / ABS_MT_SLOT          0
E: 0.539895 0003 0039 -001	# EV_ABS / ABS_MT_TRACKING_ID   -1
E: 0.539895 0003 002f 0001	# EV_ABS / ABS_MT_SLOT          1
E: 0.539895 0003 0039 -001	# EV_ABS / ABS_MT_TRACKING_ID   -1
E: 0.539895 0003 0018 0003	# EV_ABS / ABS_PRESSURE         3
E: 0.539895 0003 001c 0000	# EV_ABS / ABS_TOOL_WIDTH       0
E: 0.539895 0001 014d 0000	# EV_KEY / BTN_TOOL_DOUBLETAP   0
E: 0.539895 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +12ms
E: 0.551846 0003 0018 0001	# EV_ABS / ABS_PRESSURE         1
E: 0.551846 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +12ms
E: 0.563845 0003 0018 0000	# EV_ABS / ABS_PRESSURE         0
E: 0.563845 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +12ms
E: 0.944121 0003 0018 0001	# EV_ABS / ABS_PRESSURE         1
E: 0.944121 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +381ms
E: 0.955648 0003 0018 0000	# EV_ABS / ABS_PRESSURE         0
E: 0.955648 0000 0000 0000	# ------------ SYN_REPORT (0) ---------- +11ms
Comment 1 Peter Hutterer 2015-12-02 08:41:24 UTC
This touchpad does hover touches, so while the touch ends in the second-to-last event, the touches end in the subsequent event. Because BTN_TOUCH is up but BTN_TOOL_DOUBLETAP is down, the semi-mt code to find the top-most touch point thinks there are still fingers down and then gets confused when it can't find a touchpoint.
Comment 3 Peter Hutterer 2015-12-03 23:38:42 UTC
commit eb1197899e87c51e8c5eb7711659302175732b64
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Wed Dec 2 10:36:30 2015 +1000

    touchpad: don't try to position fake touches when no fingers are down


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.